--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <meta name="viewport" content="width=device-width, maximum-scale=1.5">
   <title>Sleep Calculator</title>
 </head>
 
